tests/baselines/reference/MemberFunctionDeclaration3.errors.txt
tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration3.ts(2,5): error TS1003: Identifier expected.
tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration3.ts(2,10): error TS1005: ';' expected.
tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration3.ts(2,13): error TS1005: '=>' expected.
tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration3.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration3.ts (4 errors) ====
    class C {
       *[foo]() { }
        ~
!!! error TS1003: Identifier expected.
             ~
!!! error TS1005: ';' expected.
                ~
!!! error TS1005: '=>' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.